# med-recognition-ai

./: Dockerfile  app.py  pyproject.toml  requirements.txt
instance/: med_history.db
templates/: index.html
